Updated table with new way of calculating speedup and minor edits to text

--- a/paper/sys_refs.bib
+++ b/paper/sys_refs.bib
@@ -22,6 +22,16 @@ year={1984}
  address = {Hingham, MA, USA}
 }
 
+@article{Bcancer,
+    author = {Mangasarian, O. L. and Wolberg, W. H.},
+    booktitle = {SIAM News},
+    number = {5},
+    pages = {1--18},
+    title = {{Cancer diagnosis via linear programming}},
+    volume = {23},
+    year = {1990}
+}
+
 @Book{Quinlan93,
 __author = {J. Ross Quinlan},
 author = {J. R. Quinlan},
@@ -35,6 +45,14 @@ title={Branch and Bound Algorithms - Principles and Examples},
 author="Jens Clausen",
 journal={},
 year={1999}
+}
+
+@misc{UCI,
+author = "K. Bache and M. Lichman",
+year = "2013",
+title = "{UCI} Machine Learning Repository",
+note={\url{http://archive.ics.uci.edu/ml}},
+institution = "University of California, Irvine, School of Information and Computer Sciences"
 }
 
 @misc{nyclu:2014,
