--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -14,7 +14,7 @@
 % See http://www.jmlr.org/format/sample.tex
 
 % Heading arguments are {volume}{year}{pages}{submitted}{published}{author-full-names}
-\jmlrheading{xx}{20xx}{1-41}{4/17}{xx/xx}{angelinoxx}{Elaine Angelino, Nicholas Larus-Stone, Daniel Alabi, Margo Seltzer, and Cynthia Rudin}
+\jmlrheading{19}{2018}{1-75}{11/17}{5/18}{17-716}{Elaine Angelino, Nicholas Larus-Stone, Daniel Alabi, Margo Seltzer, and Cynthia Rudin}
 
 % Short headings should be running head and authors last names
 \ShortHeadings{Learning Certifiably Optimal Rule Lists}{Angelino, Larus-Stone, Alabi, Seltzer, and Rudin}
@@ -29,7 +29,7 @@
         University of California, Berkeley,
         Berkeley, CA 94720
         \AND
-        \name Nicholas Larus-Stone \email nlarusstone@college.harvard.edu \\
+        \name Nicholas Larus-Stone \email nl363@cl.cam.ac.uk \\
         \name Daniel Alabi \email alabid@g.harvard.edu \\
         \name Margo Seltzer \email margo@eecs.harvard.edu \\
         \addr School of Engineering and Applied Sciences\\
@@ -42,7 +42,7 @@
         Duke University,
         Durham, NC 27708}
 
-\editor{XX}
+\editor{Maya Gupta}
 
 \maketitle
 
