Update email address

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -24,7 +24,7 @@
 
 \title{Learning Certifiably Optimal Rule Lists for Categorical Data}
 
-\author{\name Elaine Angelino \email elaine@eecs.berkeley.edu \\
+\author{\name Elaine Angelino \email elaine@eecs.harvard.edu \\
         \addr Department of Electrical Engineering and Computer Sciences\\
         University of California, Berkeley,
         Berkeley, CA 94720
