Section order:  Acknowledgments, Appendices, then References

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -599,7 +599,7 @@ across 10 cross-validation folds.
 \section{TPR, FPR, and model size for CORELS and other algorithms (NYPD, Feature Set~D)}
 \label{appendix:cpw}
 
-\begin{figure}[b!]
+\begin{figure}[htb!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
