Keywords should not be capitalised

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -51,7 +51,7 @@
 \end{abstract}
 
 \begin{keywords}
-    Rule Lists, Decision Trees, Optimization, Interpretable Models, Criminal Justice Applications
+    rule lists, decision trees, optimization, interpretable models, criminal justice applications
 \end{keywords}
 
 \input{sections/introduction}
