Hanging indent for multiline captions
\usepackage{caption}
\captionsetup{format=hang}

https://tex.stackexchange.com/questions/149752/indent-figure-multi-line-caption

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -9,6 +9,9 @@
 \input{latex_front}
 \input{latex_macros}
 
+\usepackage{caption}
+\captionsetup{format=hang}
+
 \includecomment{arxiv}\excludecomment{kdd}
 
 % See http://www.jmlr.org/format/sample.tex
