--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -92,7 +92,7 @@ in 2013 and 2014 who were given a COMPAS score pre-trial.
 %
 Recidivism is defined as being charged with a new crime within two years
 after receiving a COMPAS assessment; the article by \citet{LarsonMaKiAn16},
-and their code,\footnote{\url{https://github.com/propublica/compas-analysis}}
+and their code,\footnote{Data and code used in the analysis by \citet{LarsonMaKiAn16} can be found at \url{https://github.com/propublica/compas-analysis}.}
 provide more details about this definition.
 %
 From the original dataset of records for 7,214 individuals,
@@ -181,8 +181,25 @@ with prefixes containing the same rules, up to a permutation, and same default r
 }
 \label{fig:propublica}
 \end{figure}
+
+Figure~\ref{fig:propublica} shows optimal rule lists learned by CORELS,
+using Feature Set~B, which additionally includes race categories from the ProPublica dataset (African American, Caucasian, Hispanic,
+Other\footnote{We grouped the original Native American ($<$0.003), Asian ($<$0.005), and Other ($<$0.06) categories.}).
 %
-\begin{figure}[ht!]
+For Feature Set~B, our antecedent mining procedure generated an average
+of~189 antecedents, across folds.
+%
+None of the optimal rule lists contain antecedents that directly depend on race;
+this motivated our choice to exclude race, by using Feature Set~A, in our subsequent analysis.
+%
+For both feature sets, we replaced the original ProPublica age categories ($<$25, 25-45, $>$45)
+with a set that is more fine-grained for younger individuals (18-20, 21-22, 23-25, 26-45, $>$45).
+%
+Figure~\ref{fig:recidivism-all-folds} shows example optimal rule lists that CORELS learns
+for the ProPublica dataset (Feature Set~A, ${\Reg = 0.005}$), using 10-fold cross validation.
+
+%
+\begin{figure}[t!]
 \vspace{2mm}
 \begin{algorithmic}
 \State \bif $(age = 18-20) \band (sex = male)$ \bthen $yes$
@@ -215,7 +232,7 @@ See Figure~\ref{fig:recidivism-rule-list-005} in Appendix~\ref{appendix:examples
 \label{fig:recidivism-all-folds}
 \end{figure}
 %
-\begin{figure}[ht!]
+\begin{figure}[t!]
 \vspace{2mm}
 \begin{algorithmic}
 \State \bif $(location = transit~authority)$ \bthen $yes$
@@ -234,21 +251,6 @@ See also Figure~\ref{fig:weapon-rule-list-04-01} in Appendix~\ref{appendix:examp
 \label{fig:weapon-rule-list}
 \end{figure}
 
-Figure~\ref{fig:propublica} shows optimal rule lists learned by CORELS,
-using Feature Set~B, which additionally includes race categories from the ProPublica dataset (African American, Caucasian, Hispanic,
-Other\footnote{We grouped the original Native American ($<$0.003), Asian ($<$0.005), and Other ($<$0.06) categories.}).
-%
-For Feature Set~B, our antecedent mining procedure generated an average
-of~189 antecedents, across folds.
-%
-None of the optimal rule lists contain antecedents that directly depend on race;
-this motivated our choice to exclude race, by using Feature Set~A, in our subsequent analysis.
-%
-For both feature sets, we replaced the original ProPublica age categories ($<$25, 25-45, $>$45)
-with a set that is more fine-grained for younger individuals (18-20, 21-22, 23-25, 26-45, $>$45).
-%
-Figure~\ref{fig:recidivism-all-folds} shows example optimal rule lists that CORELS learns
-for the ProPublica dataset (Feature Set~A, ${\Reg = 0.005}$), using 10-fold cross validation.
 
 \begin{figure}[t!]
 %$ head *cpw_*0.01*opt* K = 2
@@ -397,9 +399,9 @@ COMPAS may have many other fairness defects that might be considered serious.
 %
 Many of COMPAS's survey questions are direct inquiries about socioeconomic status.
 %
-For instance, a sample COMPAS survey\footnote{
-\url{https://www.documentcloud.org/documents/2702103-Sample-Risk-Assessment-COMPAS-CORE.html}.
-Contributed by Julia Angwin, ProPublica.} asks:
+For instance, a sample COMPAS survey\footnote{A sample COMPAS survey contributed
+by Julia Angwin, ProPublica, can be found at
+\url{https://www.documentcloud.org/documents/2702103-Sample-Risk-Assessment-COMPAS-CORE.html}.} asks:
 ``Is it easy to get drugs in your neighborhood?,''
 ``How often do you have barely enough money to get by?,''
 ``Do you frequently get jobs that don't pay more than minimum wage?,''
