Use --- dashes not --

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -683,7 +683,7 @@ less than a fraction~$\Reg$ of data.
 %
 While the lower bound in Theorem~\ref{thm:min-capture} is a sub-condition
 of the lower bound in Theorem~\ref{thm:min-capture-correct},
-we can still leverage both -- since the sub-condition is easier to check,
+we can still leverage both---since the sub-condition is easier to check,
 checking it first can accelerate pruning.
 %
 In addition to applying Theorem~\ref{thm:min-capture} in the context of
