--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -370,7 +370,7 @@ across 10 cross-validation folds.
 %
 %CORELS has a lower FPR for black individuals in the data set than COMPAS, as well as a lower TPR.
 %
-%Both CORELS and COMPAS have a significantly higher FPR rate for black indviduals than white individuals--despite CORELS producing optimal rule lists without explicit race features.
+%Both CORELS and COMPAS have a significantly higher FPR rate for black indviduals than white individuals---despite CORELS producing optimal rule lists without explicit race features.
 %
 }
 \label{fig:tpr-fpr}
@@ -414,7 +414,7 @@ COMPAS's survey questions also ask about events that were not caused by the pers
 
 The fact that COMPAS requires over~130 questions to be answered, many of whose answers may not be verifiable, means that the computation of the COMPAS score is prone to errors.
 %
-Even the Arnold Foundation's ``public-safety assessment'' (PSA) score -- which is completely transparent, and has only~9 factors -- has been miscalculated in serious criminal trials, leading to a recent lawsuit~\citep{npr-bail:2017}.
+Even the Arnold Foundation's ``public-safety assessment'' (PSA) score---which is completely transparent, and has only~9 factors---has been miscalculated in serious criminal trials, leading to a recent lawsuit~\citep{npr-bail:2017}.
 %
 It is substantially more difficult to obtain the information required to calculate COMPAS scores than PSA scores (with over~14 times the number of survey questions).
 %
@@ -1229,7 +1229,7 @@ It is clear that brute force would not scale to larger problems.
 
 We compare our current computing circumstances to those of 1984, the year when CART was published.
 %
-Moore's law holds that computing power doubled every 18 months from 1984--2006.
+Moore's law holds that computing power doubled every 18 months from 1984 to 2006.
 %
 This is a period of 264 months, which means computing power has gone up by at least a factor of 32,000 since 1984.
 %
