--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -145,7 +145,7 @@ than our current solution.
 Finally, our last type of bound is based on comparing incomplete rule lists that
 capture the same data and allows us to pursue only the most accurate option.
 %
-This last class of bounds is especially important -- without our use of a novel
+This last class of bounds is especially important---without our use of a novel
 \textit{symmetry-aware map}, we are unable to solve most problems of reasonable scale.
 %
 This symmetry-aware map keeps track of the best accuracy
