Don't use utilize, apparently

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -24,7 +24,7 @@ We presented several sets of bounds in which at least one bound was strictly tig
 For example, the lower bound on accurate antecedent support (Theorem~\ref{thm:min-capture-correct})
 is strictly tighter than the lower bound on accurate support (Theorem~\ref{thm:min-capture}).
 %
-It might seem that we should only use this tighter bound, but in practice, we can utilize
+It might seem that we should only use this tighter bound, but in practice, we can use
 both---the looser bound can be checked before completing the calculation required to
 check the tighter bound.
 %
