--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -2,12 +2,16 @@
 \section{Data processing details and antecedent mining}
 \label{appendix:data}
 
+In this appendix, we provide details regarding datasets used in our experiments
+(Section~\ref{sec:experiments}).
+
 \subsection{ProPublica recidivism data set}
 Table~\ref{tab:recidivism-data} shows the~6 attributes
 and corresponding~17 categorical values
 that we use for the ProPublica data set.
 %
-From these, we construct~17 single-clause antecedents, \eg ${(age = 23-25)}$.
+From these, we construct~17 single-clause antecedents, for example,
+${(age = 23-25)}$.
 %
 We then combine pairs of these antecedents as conjunctions to form
 two-clause antecedents, \eg ${(age = 23-25) \wedge (priors = 2-3)}$.
@@ -598,17 +602,21 @@ across 10 cross-validation folds.
 \end{figure}
 
 \clearpage
-\section{TPR, FPR, and model size for CORELS and other algorithms (NYPD, Feature Set~D)}
+\section{Additional results on predictive performance and model size for
+CORELS and other algorithms}
 \label{appendix:cpw}
+
+In this appendix, we plot TPR, FPR, and model size for CORELS and three other
+algorithms, using the NYPD data set (Feature Set~D).
 
 \begin{figure}[htb!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 % left lower right upper
 \includegraphics[trim={17mm, 0mm, 27mm, 0mm},
-width=0.8\textwidth]{figs/cpw-noloc-sparsity-tpr.pdf}
+width=0.7\textwidth]{figs/cpw-noloc-sparsity-tpr.pdf}
 \includegraphics[trim={17mm, 10mm, 27mm, 4mm},
-width=0.8\textwidth]{figs/cpw-noloc-sparsity-fpr.pdf}
+width=0.7\textwidth]{figs/cpw-noloc-sparsity-fpr.pdf}
 \end{center}
 \caption{TPR (top) and FPR (bottom)
 for the test set, as a function of model size, across different methods,
